2003-06-20  Michael Herder <crapsite@gmx.net>

	* doc/descriptions/artec_eplus48u.desc: Updated status fields

2003-06-19  Peter Fales <peter@fales-lorenz.net>

	* doc/descriptions/dc25.desc, dc240.desc: Updated status fields

2003-06-19  Simon Munton <simon@munton.demon.co.uk>

	* doc/descriptions/pie.desc: Updated status fields

2003-06-19  Eddy De Greef <eddy_de_greef at tiscali dot be>

	* doc/descriptions/mustek_pp.desc: Updated status fields of CIS type
	  scanners.
        
2003-06-19  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* doc/descriptions.txt: Changed unmaintained tag to lowercase.
	* doc/descriptions/template.desc. 
	  doc/descriptions-external/template.desc.: Updated according to 
	  descriptions.txt.
	* doc/sane-gt68xx.man doc/descriptions/gt68xx.desc
	  doc/gt68xx/gt68xx.CHANGES: Added RevScan 19200i. Updated
	  device status entries.
	* doc/descriptions/abaton.desc doc/descriptions/agfafocus.desc
	  doc/descriptions/apple.desc doc/descriptions/artec.desc
	  doc/descriptions/dc210.desc doc/descriptions/dll.desc
	  doc/descriptions/dmc.desc doc/descriptions/ibm.desc
	  doc/descriptions/ma1509.desc doc/descriptions/mustek.desc
	  doc/descriptions/mustek_usb.desc doc/descriptions/net.desc
	  doc/descriptions/pint.desc doc/descriptions/pnm.desc
	  doc/descriptions/qcam.desc doc/descriptions/ricoh.desc
	  doc/descriptions/s9036.desc doc/descriptions/sp15c.desc
	  doc/descriptions/tamarack.desc doc/descriptions/test.desc
	  doc/descriptions/v4l.desc: Updated to new status system.
	  Added "unmaintained" where appropriate. The status values are
	  sometimes guessed from the documentation.
	* doc/descriptions/unsupported.desc: Added Benq parport scanners.
	* doc/descriptions-external/hp4200.desc
	  doc/descriptions-external/hpoj.desc
	  doc/descriptions-external/niash.desc
	  doc/descriptions-external/primax.desc
	  doc/descriptions-external/scanwit.desc
	  doc/descriptions-external/v4l2.desc